-
Bug
-
Resolution: Done
-
P1: Critical
-
5.3.0 Beta1
-
None
-
-
84c8e4717c70f0f214f84a5c9430dcc024bf2e8b
tl;dr: Qt 5.3.0-beta on Android uses non-threaded rendering loop, which can result in un-smooth animations. The fix for that has been commited for 5.3.0. In order to get the threaded rendering loop with Qt 5.3.0-beta, write qputenv("QML_FORCE_THREADED_RENDERER", "1"); in the beginning of your main() function.
QML Animations are less smooth with 5.3.0-beta than with 5.2.1 (on low-spec Android devices). They visibly stutter.
This is just my first observation, I know that it is not that helpful. I will try to narrow this down.
Anyway, in order to reproduce this, check out https://github.com/aportale/qtouchandlearn and run it on a low-spec Android device (press a few correct answers in the game). Qt 5.2.1 creates more fluid animations than 5.3.0.
The device I tested this with is a http://en.wikipedia.org/wiki/Samsung_Galaxy_S , which so far was a good target for Qt apps.
| For Gerrit Dashboard: QTBUG-37586 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 81310,1 | Android: Re-enable threaded rendering | stable | qt/qtbase | Status: MERGED | +2 | 0 |